--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -29,13 +29,13 @@ marketing:
 # Site header
 header:
   navbar:
-    enable: true
+    enable: false
     blox: "navbar"
     fixed_to_top: true
     show_search: true
     show_theme_chooser: true
     logo:
-      text: "Your Name"
+      text: "Nina Koh"
 
 # Site footer
 footer:
